--- a/EVote/templates/core/voting.html
+++ b/EVote/templates/core/voting.html
@@ -1,12 +1,127 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>voting</title>
+    <style>
+        #logo {
+            width: 60px;
+            height: 60px;
+            background: url(ihttps://www.dbl.id/uploads/school/66936/750-MAN_4_JAKARTA.png) 0 0;
+        }
+
+        html {
+            background: url(https://cms.disway.id/uploads/b5e1ed87e7eaad7f89b6b2dda431f534.jpg) no-repeat center fixed;
+            background-size: cover;
+        }
+
+        body {
+            color: white;
+            margin: 0;
+            padding: 0;
+        }
+
+
+        .button-candidate {
+            background-size: cover;
+            width: 300px;
+            height: 600px;
+            font-size: 2rem;
+        }
+
+        #button1 {
+            background-image: url('https://static.wikia.nocookie.net/lookism/images/a/a0/Esretrytuy54e5ryu.png');
+        }
+
+        #button2 {
+            background-image: url('https://www.presidenri.go.id/assets/uploads/2020/02/presidenri.go.id-05022020111245-5e3a40bd7cdcb1.35250820-384x512.jpg');
+        }
+
+        #button3 {
+            background-image: url('https://static.wikia.nocookie.net/lookism/images/a/a0/Esretrytuy54e5ryu.png');
+        }
+
+        #button4 {
+            background-image: url('https://static.wikia.nocookie.net/lookism/images/a/a0/Esretrytuy54e5ryu.png');
+        }
+
+        .button-candidate:hover {
+            background-image: url('https://media.geeksforgeeks.org/wp-content/uploads/20190314004249/sample-image2.png');
+            background-size: cover;
+        }
+
+        #wrapper-confirmation-button {
+            position: absolute;
+            width: 100%;
+            height: 100%;
+            display: flex;
+            align-items: center;
+            justify-items: center;
+            justify-content: center;
+            display: none;
+        }
+
+        #wrapper-confirmation-button::before {
+            content: "";
+            position: absolute;
+            width: 100%;
+            height: 100%;
+            background-color: white;
+            display: flex;
+            align-items: center;
+            justify-items: center;
+            justify-content: center;
+            opacity: 50%;
+        }
+
+        #confirmation-button {
+            padding: 5px 10px;
+            z-index: 100 !important;
+
+        }
+    </style>
 </head>
+
 <body>
-    Ini adalah website voting
+    <div id="wrapper-confirmation-button">
+        <button onclick="hideconfirmationbutton()" id="confirmation-button">
+            tidak
+        </button>
+        <button id="confirmation-button">
+            yakin
+        </button>
+    </div>
+    <img id="logo" src="https://www.dbl.id/uploads/school/66936/750-MAN_4_JAKARTA.png" width="10" height="10">
+    <h1 style="color: blue;font-size:60px;text-align:center;">
+        kwderisaisiaijdiajwid
+    </h1>
+
+    <button onclick="showconfirmationbutton()" class="button-candidate" id="button1" type="submit">
+        vote no 1
+    </button>
+    <button onclick="showconfirmationbutton()" class="button-candidate" id="button2" type="submit">
+        vote no 2
+    </button>
+    <button onclick="showconfirmationbutton()" class="button-candidate" id="button3" type="submit">
+        vote no 3
+    </button>
+    <button onclick="showconfirmationbutton()" class="button-candidate" id="button4" type="submit">
+        vote no 4
+    </button>
+
+    <script>
+        function showconfirmationbutton() {
+            let confirmationbutton = document.getElementById("wrapper-confirmation-button");
+            confirmationbutton.style.display = "flex";
+        }
+        function hideconfirmationbutton() {
+            let confirmationbutton = document.getElementById("wrapper-confirmation-button");
+            confirmationbutton.style.display = "none";
+        }
+    </script>
 </body>
+
 </html>
