--- a/templates/core/result.html
+++ b/templates/core/result.html
@@ -1,3 +1,5 @@
+{% load static %}
+
 <!DOCTYPE html>
 <html lang="en">
 
@@ -6,6 +8,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>E-VOTE⚡ICT</title>
+    <link rel="icon" type="image/x-icon" href="{% static '/core/favicon/favicon.ico' %}">
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
 
@@ -55,7 +58,7 @@
                     legend: {
                         title: {
                             display: true,
-                            text: 'HASIL PEROLEHAN SUARA',
+                            text: parseInt("{{ votes.0 }}") + parseInt("{{ votes.1 }}") + parseInt("{{ votes.2 }}") + parseInt("{{ votes.3 }}") + " SUARA TERKUMPUL",
                             font: {
                                 size: 24,
                                 weight: "bold",
