--- a/templates/core/voting.html
+++ b/templates/core/voting.html
@@ -1,3 +1,5 @@
+{% load static %}
+
 <!DOCTYPE html>
 <html lang="en">
 
@@ -5,6 +7,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/x-icon" href="{% static '/core/favicon/favicon.ico' %}">
     <title>E-VOTE⚡ICT</title>
     <style>
         #logo {
@@ -39,17 +42,17 @@
         }
 
         #button2 {
-            background: url('https://upload.wikimedia.org/wikipedia/commons/6/68/Joe_Biden_presidential_portrait.jpg') center;
+            background: url('https://upload.wikimedia.org/wikipedia/commons/thumb/5/56/Donald_Trump_official_portrait.jpg/330px-Donald_Trump_official_portrait.jpg') center;
             background-size: cover;
         }
 
         #button3 {
-            background: url('https://upload.wikimedia.org/wikipedia/commons/6/68/Joe_Biden_presidential_portrait.jpg') center;
+            background: url('https://upload.wikimedia.org/wikipedia/commons/thumb/7/76/Boris_Johnson_official_portrait_%28cropped%29.jpg/330px-Boris_Johnson_official_portrait_%28cropped%29.jpg') center;
             background-size: cover;
         }
 
         #button4 {
-            background: url('https://upload.wikimedia.org/wikipedia/commons/6/68/Joe_Biden_presidential_portrait.jpg') center;
+            background: url('https://upload.wikimedia.org/wikipedia/commons/thumb/3/34/Vladimir_Putin_-_2012.jpg/330px-Vladimir_Putin_-_2012.jpg') center;
             background-size: cover;
         }
 
