Prevent user from backing

--- a/templates/core/success.html
+++ b/templates/core/success.html
@@ -2,14 +2,25 @@
 
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/x-icon" href="{% static '/core/favicon/favicon.ico' %}">
     <title>E-VOTE⚡ICT</title>
+    <script type="text/javascript">
+        window.history.forward();
+        
+        function page_redirect() {
+            window.location = "/";
+        }
+        setTimeout('page_redirect()', 5000);
+    </script>
 </head>
+
 <body>
     Terima kasih anda sudah memilih
 </body>
+
 </html>
