--- a/templates/core/voting.html
+++ b/templates/core/voting.html
@@ -166,6 +166,10 @@
             confirmationbutton.style.display = "none";
         }
     </script>
+
+    <script>
+        window.history.forward();
+    </script>
 </body>
 
 </html>
