--- a/templates/core/result.html
+++ b/templates/core/result.html
@@ -19,7 +19,9 @@
         </div>
     </div>
 
-    <div class="rounded-full animate-pulse" style="position: absolute; top: 30px; left: 30px; width: 80px; height: 80px; background: url('https://yt3.ggpht.com/a/AATXAJxS4-zScnWW2Rh01_x6BrAM5JoJoujQ-yibiw=s900-c-k-c0xffffffff-no-rj-mo') no-repeat center; background-size: cover;"></div>
+    <div class="rounded-full animate-pulse"
+        style="position: absolute; top: 30px; left: 30px; width: 80px; height: 80px; background: url('https://yt3.ggpht.com/a/AATXAJxS4-zScnWW2Rh01_x6BrAM5JoJoujQ-yibiw=s900-c-k-c0xffffffff-no-rj-mo') no-repeat center; background-size: cover;">
+    </div>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 
 
@@ -77,7 +79,7 @@
         });
     </script>
 
-    <script>
+    <script type="text/javascript">
         window.setInterval('refresh()', 5000); 	// Call a function every 10000 milliseconds (OR 10 seconds).
 
         // Refresh or reload page.
