--- a/templates/core/voting.html
+++ b/templates/core/voting.html
@@ -8,7 +8,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/x-icon" href="{% static '/core/favicon/favicon.ico' %}">
-    <title>E-VOTE⚡ICT</title>
+    <title>E-VOTE 🤖</title>
+    <script>
+        window.history.forward();
+    </script>
     <style>
         #logo {
             width: 60px;
@@ -165,10 +168,6 @@
             let confirmationbutton = document.getElementById("wrapper-confirmation-button");
             confirmationbutton.style.display = "none";
         }
-    </script>
-
-    <script>
-        window.history.forward();
     </script>
 </body>
 
