--- a/templates/core/success.html
+++ b/templates/core/success.html
@@ -8,19 +8,50 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/x-icon" href="{% static '/core/favicon/favicon.ico' %}">
-    <title>E-VOTE⚡ICT</title>
-    <script type="text/javascript">
+    <title>SUCCESS ✅</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script>
         window.history.forward();
-        
+    </script>
+    <script type="text/javascript">
         function page_redirect() {
             window.location = "/";
         }
-        setTimeout('page_redirect()', 5000);
+        setTimeout('page_redirect()', 10000);
     </script>
 </head>
 
-<body>
-    Terima kasih anda sudah memilih
+<body onload="playAudio()">
+    <audio id="Bell" controls style="display: none;">
+        <source src="{% static '/core/Bell.mp3' %}" type="audio/mpeg">
+        Your browser does not support the audio element.
+    </audio>
+    <div style="max-width: 800px;" class="container vh-100 d-flex justify-content-center align-items-center">
+        <div>
+            <div class="mb-4 text-center">
+                <svg xmlns="http://www.w3.org/2000/svg" class="text-success" width="75" height="75" fill="currentColor"
+                    class="bi bi-check-circle-fill" viewBox="0 0 16 16">
+                    <path
+                        d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zm-3.97-3.03a.75.75 0 0 0-1.08.022L7.477 9.417 5.384 7.323a.75.75 0 0 0-1.06 1.06L6.97 11.03a.75.75 0 0 0 1.079-.02l3.992-4.99a.75.75 0 0 0-.01-1.05z" />
+                </svg>
+            </div>
+            <div class="text-center">
+                <h1>Terima Kasih !</h1>
+                <p>Silahkan meninggalkan bilik pemungutan suara.</p>
+            </div>
+        </div>
+
+        <script>
+            var x = document.getElementById("Bell");
+
+            function playAudio() {
+                x.play();
+            }
+
+            function pauseAudio() {
+                x.pause();
+            } 
+        </script>
 </body>
 
 </html>
