--- a/templates/core/success.html
+++ b/templates/core/success.html
@@ -9,7 +9,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/x-icon" href="{% static '/core/favicon/favicon.ico' %}">
     <title>SUCCESS ✅</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <script>
         window.history.forward();
     </script>
@@ -19,6 +18,37 @@
         }
         setTimeout('page_redirect()', 10000);
     </script>
+    <style>
+        @font-face {
+            font-family: The Nutcracker;
+            src: url("{% static '/core/materials/Thenutcracker.ttf' %}");
+        }
+
+        body {
+            background: url("{% static '/core/materials/background.png' %}") no-repeat center center fixed;
+            background-size: cover;
+        }
+
+        h1,
+        h3 {
+            font-family: The Nutcracker;
+            color: #9D9D9D;
+            padding: 0;
+            margin: 10px 0;
+            letter-spacing: 3px;
+        }
+
+        .center {
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            flex-direction: column;
+        }
+    </style>
 </head>
 
 <body onload="playAudio()">
@@ -26,32 +56,23 @@
         <source src="{% static '/core/Bell.mp3' %}" type="audio/mpeg">
         Your browser does not support the audio element.
     </audio>
-    <div style="max-width: 800px;" class="container vh-100 d-flex justify-content-center align-items-center">
-        <div>
-            <div class="mb-4 text-center">
-                <svg xmlns="http://www.w3.org/2000/svg" class="text-success" width="75" height="75" fill="currentColor"
-                    class="bi bi-check-circle-fill" viewBox="0 0 16 16">
-                    <path
-                        d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zm-3.97-3.03a.75.75 0 0 0-1.08.022L7.477 9.417 5.384 7.323a.75.75 0 0 0-1.06 1.06L6.97 11.03a.75.75 0 0 0 1.079-.02l3.992-4.99a.75.75 0 0 0-.01-1.05z" />
-                </svg>
-            </div>
-            <div class="text-center">
-                <h1>Terima Kasih !</h1>
-                <p>Silahkan meninggalkan bilik pemungutan suara.</p>
-            </div>
-        </div>
+    <div class="center">
+        <h1 style="font-size: 36px;"> Pilihanmu sudah kami simpan. Terima kasih! </h1>
+        <h3 style="font-size: 28px;"> Silahkan meninggalkan bilik pemungutan suara</h3>
+        <br>
+    </div>
 
-        <script>
-            var x = document.getElementById("Bell");
+    <script>
+        var x = document.getElementById("Bell");
 
-            function playAudio() {
-                x.play();
-            }
+        function playAudio() {
+            x.play();
+        }
 
-            function pauseAudio() {
-                x.pause();
-            } 
-        </script>
+        function pauseAudio() {
+            x.pause();
+        } 
+    </script>
 </body>
 
 </html>
