--- a/templates/core/success.html
+++ b/templates/core/success.html
@@ -16,7 +16,7 @@
         function page_redirect() {
             window.location = "/";
         }
-        setTimeout('page_redirect()', 10000);
+        setTimeout('page_redirect()', 15000);
     </script>
     <style>
         @font-face {
@@ -25,17 +25,18 @@
         }
 
         body {
-            background: url("{% static '/core/materials/background.png' %}") no-repeat center center fixed;
+            background: url("{% static '/core/materials/bg.png' %}") no-repeat center center fixed;
             background-size: cover;
         }
 
         h1,
         h3 {
             font-family: The Nutcracker;
-            color: #9D9D9D;
+            color: #fff;
             padding: 0;
             margin: 10px 0;
             letter-spacing: 3px;
+            text-shadow: 5px 5px 15px rgb(0, 0, 0, 1);
         }
 
         .center {
@@ -47,6 +48,12 @@
             justify-content: center;
             align-items: center;
             flex-direction: column;
+        }
+
+        .footer {
+            width: 100%;
+            height: 30px;
+            display: block;
         }
     </style>
 </head>
@@ -61,6 +68,13 @@
         <h3 style="font-size: 28px;"> Silahkan meninggalkan bilik pemungutan suara</h3>
         <br>
     </div>
+    <footer style="position: absolute; bottom: 0; left: 50%; transform: translate(-50%, 0);">
+        <div class="footer">
+            <div style="color: #fff; text-shadow: 0px 0px 5px rgb(0, 0, 0, 1); font-family: Candara; text-align: center; letter-spacing: 1px;">
+                E-Vote by ICT
+            </div>
+        </div>
+    </footer>
 
     <script>
         var x = document.getElementById("Bell");
